snuqs/compiler/qasm2/generated/Qasm2Parser.py
# Generated from Qasm2.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Qasm2Parser ( Parser ):

    grammarFileName = "Qasm2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'OPENQASM'", "';'", "'include'", "'qreg'", 
                     "'['", "']'", "'creg'", "'opaque'", "'('", "')'", "'gate'", 
                     "'{'", "'}'", "'U'", "'CX'", "','", "'barrier'", "'reset'", 
                     "'measure'", "'->'", "'if'", "'=='", "'pi'", "'j'", 
                     "'+'", "'-'", "'*'", "'/'", "'sin'", "'cos'", "'tan'", 
                     "'exp'", "'ln'", "'sqrt'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NNINTEGER", 
                      "REAL", "STRING", "Whitespace", "Newline", "LineComment", 
                      "BlockComment" ]

    RULE_mainprogram = 0
    RULE_version = 1
    RULE_program = 2
    RULE_statement = 3
    RULE_includeStatement = 4
    RULE_declStatement = 5
    RULE_regDeclStatement = 6
    RULE_qregDeclStatement = 7
    RULE_cregDeclStatement = 8
    RULE_gateDeclStatement = 9
    RULE_opaqueStatement = 10
    RULE_gateStatement = 11
    RULE_goplist = 12
    RULE_gop = 13
    RULE_gopUGate = 14
    RULE_gopCXGate = 15
    RULE_gopBarrier = 16
    RULE_gopCustomGate = 17
    RULE_gopReset = 18
    RULE_idlist = 19
    RULE_paramlist = 20
    RULE_qopStatement = 21
    RULE_qopUGate = 22
    RULE_qopCXGate = 23
    RULE_qopMeasure = 24
    RULE_qopReset = 25
    RULE_qopCustomGate = 26
    RULE_ifStatement = 27
    RULE_barrierStatement = 28
    RULE_arglist = 29
    RULE_qarg = 30
    RULE_carg = 31
    RULE_explist = 32
    RULE_exp = 33
    RULE_complex = 34
    RULE_addsub = 35
    RULE_binop = 36
    RULE_negop = 37
    RULE_unaryop = 38

    ruleNames =  [ "mainprogram", "version", "program", "statement", "includeStatement", 
                   "declStatement", "regDeclStatement", "qregDeclStatement", 
                   "cregDeclStatement", "gateDeclStatement", "opaqueStatement", 
                   "gateStatement", "goplist", "gop", "gopUGate", "gopCXGate", 
                   "gopBarrier", "gopCustomGate", "gopReset", "idlist", 
                   "paramlist", "qopStatement", "qopUGate", "qopCXGate", 
                   "qopMeasure", "qopReset", "qopCustomGate", "ifStatement", 
                   "barrierStatement", "arglist", "qarg", "carg", "explist", 
                   "exp", "complex", "addsub", "binop", "negop", "unaryop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    ID=35
    NNINTEGER=36
    REAL=37
    STRING=38
    Whitespace=39
    Newline=40
    LineComment=41
    BlockComment=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainprogramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(Qasm2Parser.VersionContext,0)


        def program(self):
            return self.getTypedRuleContext(Qasm2Parser.ProgramContext,0)


        def EOF(self):
            return self.getToken(Qasm2Parser.EOF, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_mainprogram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainprogram" ):
                listener.enterMainprogram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainprogram" ):
                listener.exitMainprogram(self)




    def mainprogram(self):

        localctx = Qasm2Parser.MainprogramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mainprogram)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.version()
                self.state = 79
                self.program(0)
                pass
            elif token in [3, 4, 7, 8, 11, 14, 15, 17, 18, 19, 21, 35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.program(0)
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(Qasm2Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(Qasm2Parser.REAL, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = Qasm2Parser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(Qasm2Parser.T__0)
            self.state = 86
            self.match(Qasm2Parser.REAL)
            self.state = 87
            self.match(Qasm2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(Qasm2Parser.StatementContext,0)


        def program(self):
            return self.getTypedRuleContext(Qasm2Parser.ProgramContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)



    def program(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Qasm2Parser.ProgramContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_program, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.statement()
            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Qasm2Parser.ProgramContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_program)
                    self.state = 92
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 93
                    self.statement() 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.IncludeStatementContext,0)


        def declStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.DeclStatementContext,0)


        def qopStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.QopStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.IfStatementContext,0)


        def barrierStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.BarrierStatementContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Qasm2Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.includeStatement()
                pass
            elif token in [4, 7, 8, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.declStatement()
                pass
            elif token in [14, 15, 18, 19, 35]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.qopStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.ifStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.barrierStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(Qasm2Parser.STRING, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_includeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStatement" ):
                listener.enterIncludeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStatement" ):
                listener.exitIncludeStatement(self)




    def includeStatement(self):

        localctx = Qasm2Parser.IncludeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_includeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(Qasm2Parser.T__2)
            self.state = 107
            self.match(Qasm2Parser.STRING)
            self.state = 108
            self.match(Qasm2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regDeclStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.RegDeclStatementContext,0)


        def gateDeclStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.GateDeclStatementContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_declStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclStatement" ):
                listener.enterDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclStatement" ):
                listener.exitDeclStatement(self)




    def declStatement(self):

        localctx = Qasm2Parser.DeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declStatement)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.regDeclStatement()
                pass
            elif token in [8, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.gateDeclStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegDeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qregDeclStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.QregDeclStatementContext,0)


        def cregDeclStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.CregDeclStatementContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_regDeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegDeclStatement" ):
                listener.enterRegDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegDeclStatement" ):
                listener.exitRegDeclStatement(self)




    def regDeclStatement(self):

        localctx = Qasm2Parser.RegDeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_regDeclStatement)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.qregDeclStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.cregDeclStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QregDeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Qasm2Parser.ID, 0)

        def NNINTEGER(self):
            return self.getToken(Qasm2Parser.NNINTEGER, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_qregDeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQregDeclStatement" ):
                listener.enterQregDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQregDeclStatement" ):
                listener.exitQregDeclStatement(self)




    def qregDeclStatement(self):

        localctx = Qasm2Parser.QregDeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_qregDeclStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(Qasm2Parser.T__3)
            self.state = 119
            self.match(Qasm2Parser.ID)
            self.state = 120
            self.match(Qasm2Parser.T__4)
            self.state = 121
            self.match(Qasm2Parser.NNINTEGER)
            self.state = 122
            self.match(Qasm2Parser.T__5)
            self.state = 123
            self.match(Qasm2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CregDeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Qasm2Parser.ID, 0)

        def NNINTEGER(self):
            return self.getToken(Qasm2Parser.NNINTEGER, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_cregDeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCregDeclStatement" ):
                listener.enterCregDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCregDeclStatement" ):
                listener.exitCregDeclStatement(self)




    def cregDeclStatement(self):

        localctx = Qasm2Parser.CregDeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cregDeclStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(Qasm2Parser.T__6)
            self.state = 126
            self.match(Qasm2Parser.ID)
            self.state = 127
            self.match(Qasm2Parser.T__4)
            self.state = 128
            self.match(Qasm2Parser.NNINTEGER)
            self.state = 129
            self.match(Qasm2Parser.T__5)
            self.state = 130
            self.match(Qasm2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GateDeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opaqueStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.OpaqueStatementContext,0)


        def gateStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.GateStatementContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_gateDeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGateDeclStatement" ):
                listener.enterGateDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGateDeclStatement" ):
                listener.exitGateDeclStatement(self)




    def gateDeclStatement(self):

        localctx = Qasm2Parser.GateDeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_gateDeclStatement)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.opaqueStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.gateStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpaqueStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Qasm2Parser.ID, 0)

        def idlist(self):
            return self.getTypedRuleContext(Qasm2Parser.IdlistContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(Qasm2Parser.ParamlistContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_opaqueStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpaqueStatement" ):
                listener.enterOpaqueStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpaqueStatement" ):
                listener.exitOpaqueStatement(self)




    def opaqueStatement(self):

        localctx = Qasm2Parser.OpaqueStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_opaqueStatement)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(Qasm2Parser.T__7)
                self.state = 137
                self.match(Qasm2Parser.ID)
                self.state = 138
                self.idlist()
                self.state = 139
                self.match(Qasm2Parser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(Qasm2Parser.T__7)
                self.state = 142
                self.match(Qasm2Parser.ID)
                self.state = 143
                self.match(Qasm2Parser.T__8)
                self.state = 144
                self.match(Qasm2Parser.T__9)
                self.state = 145
                self.idlist()
                self.state = 146
                self.match(Qasm2Parser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(Qasm2Parser.T__7)
                self.state = 149
                self.match(Qasm2Parser.ID)
                self.state = 150
                self.match(Qasm2Parser.T__8)
                self.state = 151
                self.paramlist()
                self.state = 152
                self.match(Qasm2Parser.T__9)
                self.state = 153
                self.idlist()
                self.state = 154
                self.match(Qasm2Parser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Qasm2Parser.ID, 0)

        def idlist(self):
            return self.getTypedRuleContext(Qasm2Parser.IdlistContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(Qasm2Parser.ParamlistContext,0)


        def goplist(self):
            return self.getTypedRuleContext(Qasm2Parser.GoplistContext,0)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_gateStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGateStatement" ):
                listener.enterGateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGateStatement" ):
                listener.exitGateStatement(self)




    def gateStatement(self):

        localctx = Qasm2Parser.GateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_gateStatement)
        try:
            self.state = 207
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(Qasm2Parser.T__10)
                self.state = 159
                self.match(Qasm2Parser.ID)
                self.state = 160
                self.idlist()
                self.state = 161
                self.match(Qasm2Parser.T__11)
                self.state = 162
                self.match(Qasm2Parser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(Qasm2Parser.T__10)
                self.state = 165
                self.match(Qasm2Parser.ID)
                self.state = 166
                self.match(Qasm2Parser.T__8)
                self.state = 167
                self.match(Qasm2Parser.T__9)
                self.state = 168
                self.idlist()
                self.state = 169
                self.match(Qasm2Parser.T__11)
                self.state = 170
                self.match(Qasm2Parser.T__12)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.match(Qasm2Parser.T__10)
                self.state = 173
                self.match(Qasm2Parser.ID)
                self.state = 174
                self.match(Qasm2Parser.T__8)
                self.state = 175
                self.paramlist()
                self.state = 176
                self.match(Qasm2Parser.T__9)
                self.state = 177
                self.idlist()
                self.state = 178
                self.match(Qasm2Parser.T__11)
                self.state = 179
                self.match(Qasm2Parser.T__12)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 181
                self.match(Qasm2Parser.T__10)
                self.state = 182
                self.match(Qasm2Parser.ID)
                self.state = 183
                self.idlist()
                self.state = 184
                self.match(Qasm2Parser.T__11)
                self.state = 185
                self.goplist()
                self.state = 186
                self.match(Qasm2Parser.T__12)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 188
                self.match(Qasm2Parser.T__10)
                self.state = 189
                self.match(Qasm2Parser.ID)
                self.state = 190
                self.match(Qasm2Parser.T__8)
                self.state = 191
                self.match(Qasm2Parser.T__9)
                self.state = 192
                self.idlist()
                self.state = 193
                self.match(Qasm2Parser.T__11)
                self.state = 194
                self.goplist()
                self.state = 195
                self.match(Qasm2Parser.T__12)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 197
                self.match(Qasm2Parser.T__10)
                self.state = 198
                self.match(Qasm2Parser.ID)
                self.state = 199
                self.match(Qasm2Parser.T__8)
                self.state = 200
                self.paramlist()
                self.state = 201
                self.match(Qasm2Parser.T__9)
                self.state = 202
                self.idlist()
                self.state = 203
                self.match(Qasm2Parser.T__11)
                self.state = 204
                self.goplist()
                self.state = 205
                self.match(Qasm2Parser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoplistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Qasm2Parser.GopContext)
            else:
                return self.getTypedRuleContext(Qasm2Parser.GopContext,i)


        def getRuleIndex(self):
            return Qasm2Parser.RULE_goplist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoplist" ):
                listener.enterGoplist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoplist" ):
                listener.exitGoplist(self)




    def goplist(self):

        localctx = Qasm2Parser.GoplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_goplist)
        self._la = 0 # Token type
        try:
            self.state = 217
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 209
                self.gop()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 210
                self.gop()
                self.state = 214
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360180736) != 0):
                    self.state = 211
                    self.gop()
                    self.state = 216
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gopUGate(self):
            return self.getTypedRuleContext(Qasm2Parser.GopUGateContext,0)


        def gopCXGate(self):
            return self.getTypedRuleContext(Qasm2Parser.GopCXGateContext,0)


        def gopBarrier(self):
            return self.getTypedRuleContext(Qasm2Parser.GopBarrierContext,0)

